--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,6 @@
 <html doctype="html">
+
+<!-- Head content -->
 <head>
   <title>Building Worlds Hack</title>
   <!-- CSS imports -->
@@ -19,35 +21,35 @@
 
 <!-- Webstie body -->
 <body>
-<h1>Building Worlds Hack</h1>
 
-<!-- Navigation -->
-<nav>
-  <ul>
-    <li><a>Home</a></li>
-    <li><a>Info</a></li>
-    <li><a>Signup</a></li>
-  </ul>
-</nav>
+
+<!-- Site header/nav bar -->
+<header class="site-header">
+  <h1>Building Worlds Hack</h1>
+
+  <!-- Navigation -->
+  <nav>
+    <ul>
+      <li><a>Home</a></li>
+      <li><a>Info</a></li>
+      <li><a>Signup</a></li>
+    </ul>
+  </nav>
+</header>
+
 
 <!-- Main content -->
 <main>
 
+  <!-- Splash Content -->
+  <div class="hero-graphic">
+    <!-- Logo Graphic -->
+  </div>
 
-  <article>
-      <header>
-          <h2>Dates</h2>
-          <p class="subtitle">We don't know when or where this is happening yet</p>
-      </header>
-      <div class="body">
-          <p></p>
-      </div>
-  </article>
-
-
+  <!-- Actual Page Content -->
   <article>
     <header>
-      <h2>Categories</h2>
+      <h2>Mission</h2>
       <p class="subtitle">Virtual Reality, Games, Tech, Art</p>
     </header>
     <div class="body">
@@ -57,6 +59,7 @@
   </article>
 
 
+  <!-- How to structure items on main page
   <article>
     <header>
       <h2></h2>
@@ -67,15 +70,44 @@
       </p>
     </div>
   </article>
+  -->
 
 
 </main>
 
-<!-- Footer  -->
-<foot>
 
-</foot>
+<!-- Footer  -->
+<footer>
+
+  <!-- Contact links -->
+  <aside class="contact">
+    <ul>
+      <li><a class="email">fsuacmsiggraph@gmail.com</a></li>
+      <li><a class="link" href="https://www.facebook.com/groups/fsusiggraph/">Facebook</a></li>
+      <li><a></a></li>
+    </ul>
+  </aside>
+
+  <!-- Navigation Links -->
+  <aside class="navigation">
+    <ul>
+      <li><a class="link"></a>Home</li>
+      <li><a class="link"></a>Info</li>
+      <li><a class="link"></a>Signup</li>
+      <li><a class="link"></a>Sponsor</li>
+      <li><a class="link"></a>Schedule</li>
+    </ul>
+  </aside>
+
+  <!-- -->
+  <aside class="">
+    <ul>
+      <li><a></a></li>
+    </ul>
+  </aside>
+
+</footer>
+
 
 </body>
-
 </html>
