Simplified site to better meet goals.
Page now only has a header, main content, and a footer with contact informaiton.
Created CSS files which index.html imports.

--- a/static/index.html
+++ b/static/index.html
@@ -26,80 +26,36 @@
 <!-- Site header/nav bar -->
 <header class="site-header">
   <h1>Building Worlds Hack</h1>
-
-  <!-- Navigation -->
-  <nav>
-    <ul>
-      <li><a>Home</a></li>
-      <li><a>Info</a></li>
-      <li><a>Signup</a></li>
-    </ul>
-  </nav>
 </header>
 
 
 <!-- Main content -->
 <main>
-
-  <!-- Splash Content -->
-  <div class="hero-graphic">
-    <!-- Logo Graphic -->
-  </div>
-
-  <!-- Actual Page Content -->
-  <article>
-    <header>
-      <h2>Mission</h2>
-      <p class="subtitle">Virtual Reality, Games, Tech, Art</p>
-    </header>
-    <div class="body">
-      <p>We want to bring graphics, Virtual Reality (VR), and interactive techniques to people from any discipline.  </p>
-      <p></p>
+  <!--  -->
+  <article class="summary">
+    <div class="container">
+      <p>Insert summary of event</p>
+      <p>Insert more summary content</p>
+      <p>Sign up for our mailing list to learn more</p>
     </div>
+    <span class="button"><a>Mailing List<a/></span>
   </article>
-
-
-  <!-- How to structure items on main page
-  <article>
-    <header>
-      <h2></h2>
-      <p class="subtitle"></p>
-    </header>
-    <div class="body">
-      <p>
-      </p>
-    </div>
-  </article>
-  -->
-
-
 </main>
 
 
 <!-- Footer  -->
 <footer>
 
-  <!-- Contact links -->
+  <!-- Contact Links -->
   <aside class="contact">
     <ul>
       <li><a class="email">fsuacmsiggraph@gmail.com</a></li>
       <li><a class="link" href="https://www.facebook.com/groups/fsusiggraph/">Facebook</a></li>
-      <li><a></a></li>
+      <li><a class="link" href="http://www.siggraph.org">SIGGRAPH</a></li>
     </ul>
   </aside>
 
-  <!-- Navigation Links -->
-  <aside class="navigation">
-    <ul>
-      <li><a class="link"></a>Home</li>
-      <li><a class="link"></a>Info</li>
-      <li><a class="link"></a>Signup</li>
-      <li><a class="link"></a>Sponsor</li>
-      <li><a class="link"></a>Schedule</li>
-    </ul>
-  </aside>
-
-  <!-- -->
+  <!--  -->
   <aside class="">
     <ul>
       <li><a></a></li>
