Created basic CSS layout
Centered main content, set up a flex-box for the footer, centered the title
inside a header.

--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
   <title>Building Worlds Hack</title>
   <!-- CSS imports -->
   <link rel="stylesheet" type="text/css" href="style/normalize.css">
-  <link rel="styelsheet" type="text/css" href="style/main.css">
+  <link rel="stylesheet" type="text/css" href="style/main.css">
 
   <!-- HTML-5 Shim for old I.E. browsers -->
   <!-- [if lt IE 9]>
@@ -15,7 +15,7 @@
   <!-- Metadata for social media sites -->
   <meta></meta>
 
-  <!-- Script imports for website -->
+  <!-- Script imports -->
   <script></script>
 <head>
 
@@ -24,14 +24,14 @@
 
 
 <!-- Site header/nav bar -->
-<header class="site-header">
+<header class="site-header centered">
   <h1>Building Worlds Hack</h1>
 </header>
 
 
 <!-- Main content -->
-<main>
-  <!--  -->
+<main class="centered">
+
   <article class="summary">
     <div class="container">
       <p>Insert summary of event</p>
@@ -40,6 +40,7 @@
     </div>
     <span class="button"><a>Mailing List<a/></span>
   </article>
+
 </main>
 
 
@@ -48,6 +49,7 @@
 
   <!-- Contact Links -->
   <aside class="contact">
+    <header>Contact Us</header>
     <ul>
       <li><a class="email">fsuacmsiggraph@gmail.com</a></li>
       <li><a class="link" href="https://www.facebook.com/groups/fsusiggraph/">Facebook</a></li>
@@ -57,8 +59,9 @@
 
   <!--  -->
   <aside class="">
+    <header>Helpful Links</header>
     <ul>
-      <li><a></a></li>
+      <li><a>asdf</a></li>
     </ul>
   </aside>
 
