Removed footer from homepage.
We did not need that much information, and it would be better placed as links
in a header.

--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 
 <!-- Head content -->
 <head>
-  <title>Building Worlds Hack</title>
+  <title>Building Worlds</title>
   <!-- CSS imports -->
   <link rel="stylesheet" type="text/css" href="style/normalize.css">
   <link rel="stylesheet" type="text/css" href="style/main.css">
@@ -19,13 +19,13 @@
   <script></script>
 <head>
 
-<!-- Webstie body -->
-<body>
+<!-- Website body -->
+<body class="circle">
 
 
 <!-- Site header/nav bar -->
 <header class="site-header centered">
-  <h1>Building Worlds Hack</h1>
+  <h1>Building Worlds</h1>
 </header>
 
 
@@ -34,39 +34,14 @@
 
   <article class="summary">
     <div class="container">
-      <p>Insert summary of event</p>
-      <p>Insert more summary content</p>
-      <p>Sign up for our mailing list to learn more</p>
+      <p id="promo-1" class="scroll">Experience the new reality.</p>
+      <p id="promo-2" class="scroll">Build new experiences.</p>
+      <p id="promo-3" class="scroll">Combine art &amp; technology.</p>
     </div>
-    <span class="button"><a>Mailing List<a/></span>
-  </article>
+    <span class="button"><a href="">Mailing List</a></span>
 
+    </article>
 </main>
-
-
-<!-- Footer  -->
-<footer>
-
-  <!-- Contact Links -->
-  <aside class="contact">
-    <header>Contact Us</header>
-    <ul>
-      <li><a class="email">fsuacmsiggraph@gmail.com</a></li>
-      <li><a class="link" href="https://www.facebook.com/groups/fsusiggraph/">Facebook</a></li>
-      <li><a class="link" href="http://www.siggraph.org">SIGGRAPH</a></li>
-    </ul>
-  </aside>
-
-  <!--  -->
-  <aside class="">
-    <header>Helpful Links</header>
-    <ul>
-      <li><a>asdf</a></li>
-    </ul>
-  </aside>
-
-</footer>
-
 
 </body>
 </html>
