Turned sign-up button into an actual button.
Added a paragraph that shows that we are actually a hackathon of some
sort.

--- a/static/index.html
+++ b/static/index.html
@@ -37,8 +37,9 @@
       <p id="promo-1" class="scroll">Experience the new reality.</p>
       <p id="promo-2" class="scroll">Build new experiences.</p>
       <p id="promo-3" class="scroll">Combine art &amp; technology.</p>
+      <p id="promo-4" class="scroll">Attend the VR hackathon.</p>
     </div>
-    <span class="button"><a href="">Mailing List</a></span>
+    <span class="button"><a href="">Get Updates</a></span>
 
     </article>
 </main>
