Added description section.

--- a/static/index.html
+++ b/static/index.html
@@ -33,6 +33,9 @@
 <main class="centered">
 
   <article class="summary">
+    <section>
+        <p>November 2016</p>
+    </section>
     <div class="container">
       <p id="promo-1" class="scroll">Experience the new reality.</p>
       <p id="promo-2" class="scroll">Build new experiences.</p>
