--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,5 @@
-<html doctype="html">
+<!DOCTYPE html>
+<html>
 
 <!-- Head content -->
 <head>
@@ -16,7 +17,11 @@
   <meta></meta>
 
   <!-- Script imports -->
-  <script></script>
+  <script
+    src="http://code.jquery.com/jquery-2.2.4.min.js"
+    integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+    crossorigin="anonymous"></script>
+  <script src="js/headline.js"></script>
 <head>
 
 <!-- Website body -->
@@ -34,17 +39,19 @@
 
   <article class="summary">
     <section>
-        <p>November 2016</p>
+        <p class="description">Attend the VR hackathon, <br> November 2016</p>
     </section>
-    <div class="container">
-      <p id="promo-1" class="scroll">Experience the new reality.</p>
-      <p id="promo-2" class="scroll">Build new experiences.</p>
-      <p id="promo-3" class="scroll">Combine art &amp; technology.</p>
-      <p id="promo-4" class="scroll">Attend the VR hackathon.</p>
-    </div>
+    <!-- Headline changes sentence over interval of time with effect. -->
+    <section class="headline push">
+      <span class="wrapper">
+        <!-- All of the sentences used in headline. -->
+        <b class="visible">Experience the new reality.</b>
+        <b class="hidden">Build new experiences.</b>
+        <b class="hidden">Combine art &amp; technology.</b>
+      </span>
+    </section>
     <span class="button"><a href="">Get Updates</a></span>
-
-    </article>
+  </article>
 </main>
 
 </body>
