--- a/static/index.html
+++ b/static/index.html
@@ -45,7 +45,7 @@
     <section class="headline push">
       <span class="wrapper">
         <!-- All of the sentences used in headline. -->
-        <b class="visible">Experience the new reality.</b>
+        <b class="visible">Discover the new reality.</b>
         <b class="hidden">Build new experiences.</b>
         <b class="hidden">Combine art &amp; technology.</b>
       </span>
