Updates theme to more minimalistic grey colors.

--- a/index.html
+++ b/index.html
@@ -43,12 +43,10 @@
     </section>
     <!-- Headline changes sentence over interval of time with effect. -->
     <section class="headline push">
-      <span class="wrapper">
-        <!-- All of the sentences used in headline. -->
-        <b class="visible">Discover the new reality.</b>
-        <b class="hidden">Build new experiences.</b>
-        <b class="hidden">Combine art &amp; technology.</b>
-      </span>
+      <!-- All of the sentences used in headline. -->
+      <p class="visible">Discover the new reality.</li>
+      <p class="hidden">Build new experiences.</li>
+      <p class="hidden">Combine art &amp; technology.</li>
     </section>
     <span class="button"><a href="">Get Updates</a></span>
   </article>
