Adds slide in logo animation on load with GSAP.
Simple slide in from 0 opacity; each hemisphere loads in seperate.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     src="http://code.jquery.com/jquery-2.2.4.min.js"
     integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
     crossorigin="anonymous"></script>
-  <script src="js/headline.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/TweenMax.min.js"></script>
 <head>
 
 <!-- Website body -->
@@ -36,8 +36,9 @@
 
 <!-- Main content -->
 <main class="centered">
+    <!-- Our SVG logo -->
     <svg id="logo" xmlns="http://www.w3.org/2000/svg" width="1080" height="1080" viewBox="0 0 1080 1080">
-      <g id="hemisphere-top" fill-rule="evenodd">
+      <g id="hemisphere-gold" fill-rule="evenodd">
         <path class="gold" d="M262 239l51 195H211.7zm152.2 155.6l-137-115 28 108zM306.6 393l20.7 81.4 60-57.6zm1-2.4L398 396l-8.6 19.3z" fill="#d7ae70"/>
         <path class="gold" d="M399.5 395.6l-6.6 18.2 24-17.2z" fill="#bea362"/>
         <path class="gold" d="M405 384l13.7 11.6 18.7-12zm16.7-48.5L403 382h34.4zm2-2l32.4-31.3-16 78.3zm35-30L511 327l-55.7-4zM454 325l-11 52.7 68-48.7zm-110.5-1.6l72.7-7.6 6 12.6z" fill="#c99964"/>
@@ -91,7 +92,7 @@
         <path class="gold" d="M201 625.4l58 61 79.4-136.7zm63.7-90.4l-63 87.7L299 569zm38.3-31l-34.3 28.5 52.8 11.4zm-35.6 30.5l33 32.8 36-18zm37.6-32l13.7 29.5 83.3-57.6zm15 31.3l4.8 11 12.8 2.6zm1.5-1.3L385 489l-44.6 57.6zm37.5-83.8l19.3 29.2-69.3 21zM200.8 628.5l47.2 50-58.6 19.7zm56.8 60.5l6.6 50.6 80.3-35zm38-62L276 662.5l17.4 29.5zm-21.3 36.6L260.6 687l31.3 6.6zm22.2 9.4l24.5 26-25.5-4.6zm-74.8 18l-3 52 38.3-34zm226.8 4.6l9 11.7 71.8-39.4zM345 707.8l-1 36.3 32.3-17zm-35.4 15.6l32.3-15-1 34.2zm-43.4 18.2l39.4-16.2L343 745zm-8.2-30.3l3 30.3-35.2-.5zm-81 3.7l16-13.3 21 15.2zm.3 2.4l16 25.2L213 719zm16-18.2l23.4 16.6 1-25.7zm23 19.8l-21 25.6 20.4 7.6zm7.2 23l-5.3 11.7 25.8 5.6zm3.8 1l33 .6-14.3 15.2zm34.7 1.6l16.3 15.2-30.3.5zm2-.6l16 14.8 15.5-14.4zm33.5 1l26.8 8.7-42.5 6zm1.8-.4L345 747l-18.2 5.7zm51.2-39.4l53.6.8-1 16.4zm-4.8.8l43.7 27 5-11.6zm62 .5l6 16.7 37.8-21.5zm38.5-10l-27 7.5 30.8-3.6zm-248-66.3l-14 41 7.5 1zM183 672.7l-5.2 18 14-17.3zm-5.7 22v16.6l13.6-10zm.5-1.7l13.4-15.8-3.6 21.2zM347 745l19.2-10.5 21 2.3zm31.6-16.5l-10 4.5 18.8 1.8zm18.4-6l-5.8 12 18.7-8.8zm9-14.7l-1.2 14.4 7.3 2zm46.3-4.6l-28.5 16.2 32.5-10.6zm-228-14.4l33.5 18.5-2.7-18.5zm7-2.3l17.7-6 5.6 6zm133-236l16.5 27 23.5-6zm26.7-6l15 25 62.7-53.7zm59-66.5l23.3 32.8 32.8-21.2zm-44 59l42.5-56.5 23.2 32.8zm-14.6-19.2L405 435l41-55.5zm-2 1.6l-19.2 18 34-1zM367.7 440l7 13.7L361 446zm21.5 6l-11.2 8 26.6 16zm-18.5-6.4l5.6 12.6 23.2-13.6zm139-106.6L453 373.4l55.6 13.6zm4-2l-2 54 46-28.8zm34-26.5l-27 23.4 52-1zM517 329l20 12 35.8-11.5zm43.6 24.7l13-23-35.2 12.2zm37.7-61.7l-33 58.2 44.8-43zm4.3 0l16.6 23.3 36-42.4zm56.8-19.4L620.2 319l100.5-42.6zm-93.2 27.6l29-7.6-18.7 33zm-17 2.2l14.5-.7 10.6 23.7zm62.2 6.6l-33.6 32.6 40.4-21.7zm52-38.4l53.3-15 4.5 18.8zm57.3-13.4l3 15.7 52-18zm57 .5l5 3-35.2 7zm-10.5-9.7l-35.8 6.2 42-1.5zm2.5-1l15.2 11.2 14-11.6zm35.3 0l21.8 10.7-40.4 2.6zm6.7-.4L834 248l-4.7 8.7zM837 249l22.6 14.3-27.7-4.6z" fill="#876d49"/>
         <path class="gold" d="M789.4 199.7l38 45.4 19.4-4zm58 43l11.7 19-25-16.3zm-82.2-70.3l21.2 23.7 38.4 27z" fill="#aa8954"/>
       </g>
-      <g id="hemisphere-bot" fill-rule="evenodd">
+      <g id="hemisphere-garnet" fill-rule="evenodd">
         <path class="garnet" d="M561 402.5l73-42.5 12 12zm74.7-44l5.4 5.8 39-20.7zm44-12.5l4 13.6-41.6 5zM643 366.8l4.7 4.6L676 363zm37.8-24.3l4.7 18 2.5-21.2zm9.4-4.5l3.5 5.2 6.6-9.6zm-.8 3l-2 19.4 22-.8zm14.4-8.5l-6.5 12 48.6 16zm-3.6 15.7l12 10.7 27.2 1zm6-16.4l9.3 4.3 10-4zm3.6-3.6l18.2 1.4 18-10.7zm39.6-11.8l15.8-4v4.7zm20-5.7l38-5-15.8 13.2zm-21 10l40 18 36.4-16.2zm.7 2.5l-1 34.7 37-17zm-3-.7L717 339l30 19zm3 38.2l79-36 7.8 50zm18 5l30.5 30.7 2.8-25zm36 7.3l30 3.4-15 24.6zm-2.4 1.6l-4 69.3 20.4-41zm35 5.4L758 515.4l138.4-79.7S837 381 835.4 380zm-1.8-25.7l39.6-34.7-1.4 52.2zm-4.3-33l4.3 30.5 35.7-31zm-16-16l-17 13 30.5 1.3zm3.7-1.7h26.3l-13 15.4zm30.6.4l11.8 15.3 14.3-10.7zm-2.5 1l-11.7 13.6 22.2-.4zm30.5 5.4l.3 32.5 20.5-24zm-3 1.4l-9.5 7 9-1.7zM898 321l-12.6 16.5 27.8 6.4zm-14.8 18.6l-6.4 5.8 20 14zM875 348l.7 23.8 24-7.2zm-29.6 37.7l57.8-19.6-7 68zm-8.6-15.3l-2.5-13.3 17 8zm.7 3.6l17.5-7.6v14zm-1 2l7 7.2 8.3-2.5zm21-9l-.7 11.6 13.2-4.3zm29-27.4l14.2 21.8 15.4-12.8zm15.3 23l15.3-12 1 19.8zm3.6 4.2l-2.5 17 13-11.3zm10.3 9.2l-12 11 9.5 4zM902 389.6l-3.4 39.7 15-35.7zM798.6 496.4l30.7 33.6 61.8-88.6zM755 516.8l-45 61 63.6-46zm7-.8l34-17 32 31.7zm-2.7 2.2l16.4 12.2-.3-8.3zm18.2 5l19 36L825 533zm0 8.2l-80.7 58.2 98.6-26.7zm4.3 38L716.4 587l19.3 33zm-89.8 24l21.2-5.3 16.4 25zm.5 4.5l15.4 22 11-10zm29.5 14l11.6 8-3.6 8zm-3.4 2l-13 12 19.8-1zm-24 15l33.6-1-19 20zm-3.2 1l15.4 18-57.5 41.3zM638 644l50.6-46.4 17.8 24zm-13.7 9.3l22 35 40.8-55zm-3 2l-30.6 23L644 690zM588.7 682l-1.5 56 61.7-45.7zm-4 .2l-44 30 43.7 25zm-21.4 45.5l-31 12.5 49-.7zM537.5 714l-11 26 33-14zm-11.8 31l-5.7 5 30.7 14.3zm-1.4 9.3l11 12.5L547 765zm-5.3-1.8l-13.6 25 27.8-9.3zm-27.6 9.5l10.7 16.2 33-59.6zm-9.6-12.4l7.5 12.2 33.6-35.4zM379.3 796l62 3 38.7-48.6zM480 754.3L445 798l54.6-19.4zm-104 42L323.6 817l55.7 1zm4 1.7l2.5 18.8 56-15.7zm-60.7 13.8l3.6 4.3 33-14zm-45 2.8l42-3.5-18.8 18zm-4.3.4l-30.4-4.6 25 16zm3 1l-5.5 11.5 26.8 2zm44-1l-17.7 14.6 34-2.5zm9.8 4l9 7.8 40.6-8zM526 743l27.2 20.6 29.3-22.5z" fill="#380b06"/>
         <path class="garnet" d="M768.7 590l-58 58.2 83.8 23.7z" fill="#631009"/>
         <path class="garnet" d="M785 627l56.5 196L887 625.3z" fill="#651009"/>
@@ -144,6 +145,7 @@
     <span class="button"><a href="">Get Updates</a></span>
   </article>
 </main>
-
+<script src="js/headline.js"></script>
+<script src="js/svgAnimation.js"></script>
 </body>
 </html>
