Added more descriptive comments.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </section>
     <!-- Headline changes sentence over interval of time with effect. -->
     <section class="headline push">
-      <!-- All of the sentences used in headline. -->
+      <!-- All of the sentences used in headline, add as many as desired. -->
       <p class="visible">Discover the new reality.</li>
       <p class="hidden">Build new experiences.</li>
       <p class="hidden">Combine art &amp; technology.</li>
