Updates title and adds width meta tag.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <!-- Head content -->
 <head>
-  <title>Building Worlds</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Building Realities Hackathon: November 2016</title>
   <!-- CSS imports -->
   <link rel="stylesheet" type="text/css" href="style/normalize.css">
   <link rel="stylesheet" type="text/css" href="style/main.css">
