Added character encoding.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <!-- Head content -->
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Building Realities Hackathon: November 2016</title>
   <!-- CSS imports -->
   <link rel="stylesheet" type="text/css" href="style/normalize.css">
