Closes improperly closed p tags.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
 <!-- Header with Summary Content -->
 <header class="masthead centered">
-    <h1>Building Realities,<br>November 2016</h1>
+    <h1>Building Realities</h1>
+    <h2>VR Hackathon, FSU, November 2016</h2>
         <!-- Our SVG logo -->
         <div class="container realtive">
             <svg id="logo" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 1080 1080">
@@ -125,15 +126,15 @@
                     <path class="garnet" d="M293 831l14.8-.5-1.7 4zm16.4 0l17-2.3-8.7 7.6zm21.4-1.5l30.8 13.4-40.4-6zm-60.3-.5l-10.6 7.3 58 40.7zm18.7 30.3l31.5 20.4-3.8 7zm34 22.5l16 19.4-20.7-12.4zm-82.8-68.2l17 21.4 9.3-6.3zm218 123l63-15.2-26 32.6zm63.8-13.2L499 954.7l44.5.3zm46.5-5L550.5 956l38.4-2zm1.8-2.4l26.8-4.2-5.4 42zm28-1.7l-5 40 20-1.3zM454.8 937l-15.6 7 52.5 10zm-15.4-11.3l-2.8 17 14.2-6.6zm-14-3.3l7.7 19.2 5-16.4zm-48.4-12l-3.7 8.5 50.2 2zm2.3 11L411 923l19.8 19zm34 1.6l16 15-6-15z" fill="#510f08"/>
                 </g>
             </svg>
-            <span class="button signup"><a href="">Get Updates</a></span>
+            <span class="button signup"><a href="">Coordinator Singup</a></span>
         </div>
         <!-- Headline changes sentence over interval of time with effect. -->
         <section class="headline push">
             <!-- All of the sentences used in headline, add as many as desired. -->
             <p class="visible">Attend the VR hackathon.</p>
-            <p class="hidden">Discover the new reality.</li>
-            <p class="hidden">Build new experiences.</li>
-            <p class="hidden">Combine art &amp; technology.</li>
+            <p class="hidden">Discover the new reality.</p>
+            <p class="hidden">Build new experiences.</p>
+            <p class="hidden">Combine art &amp; technology.</p>
         </section>
 </header>
 
