Adds absolute positioning to section elements.
Allows for consistent layout and spacing across browsers.
Specific position determined on each section.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <header class="masthead centered">
     <h1>Building Realities</h1>
     <h2>VR Hackathon, FSU, November 2016</h2>
+    <section class="absolute teaser">
         <!-- Our SVG logo -->
         <div class="container realtive">
             <svg id="logo" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 1080 1080">
@@ -128,14 +129,17 @@
             </svg>
             <span class="button signup"><a href="">Coordinator Singup</a></span>
         </div>
-        <!-- Headline changes sentence over interval of time with effect. -->
-        <section class="headline push">
+    </section>
+    <!-- Headline changes sentence over interval of time with effect. -->
+    <section class="absolute summary">
+        <div class="headline realtive">
             <!-- All of the sentences used in headline, add as many as desired. -->
             <p class="visible">Attend the VR hackathon.</p>
             <p class="hidden">Discover the new reality.</p>
             <p class="hidden">Build new experiences.</p>
             <p class="hidden">Combine art &amp; technology.</p>
-        </section>
+        </div>
+    </section>
 </header>
 
 <nav class="site-nav crossfade">
