Adds metadata for social media.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
+  <!-- Title, Icon, & Description -->
   <title>Building Realities Hackathon: November 2016</title>
+  <link rel="icon" href="img/SIGGRAPH_Icon.png"/>
+
   <!-- CSS imports -->
   <link rel="stylesheet" type="text/css" href="style/normalize.css">
   <link rel="stylesheet" type="text/css" href="style/main.css">
@@ -15,8 +19,26 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <[endif]-->
 
+
   <!-- Metadata for social media sites -->
-  <meta></meta>
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@GwenLofman" />
+  <meta name="twitter:title" content="Building Realities" />
+  <meta name="twitter:description" content="Attend the VR hackathon November 2016 at FSU"/>
+  <meta name="twitter:image" content="img/SIGGRAPH_Logo.svg" />
+
+  <!-- Facebook & Open Graph -->
+  <meta property="og:title" content="Building Realities"/>
+  <meta property="og:description" content="Attend the VR hackathon November 2016 at FSU"/>
+  <meta property="og:site_name" content="Building Realities"/>
+  <meta property="og:url" content="https://acm-siggraph-fsu.github.io/buildingWorldsHack"/>
+  <meta property="og:image" content="img/SIGGRAPH_Logo.svg"/>
+  <meta property="og:image:width" content="600px" />
+  <meta property="og:image:height" content="600px" />
+  <meta property="og:type" content="webstie" />
+
 
   <!-- Script imports -->
   <script
@@ -139,7 +161,7 @@
             <p class="hidden">Build new experiences.</p>
             <p class="hidden">Combine art &amp; technology.</p>
         </div>
-        <p class="tagline">We are looking for coordinators!</p>
+        <p class="tagline"><b>We are lookign for coordinators!</b></p>
         <p class="tagline">Hosted by ACM SIGGRAPH @ FSU</p>
     </section>
 </header>
