Fixes typo, changes lookng to looking

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <p class="hidden">Build new experiences.</p>
             <p class="hidden">Combine art &amp; technology.</p>
         </div>
-        <p class="tagline"><b>We are lookign for coordinators!</b></p>
+        <p class="tagline"><b>We are looking for coordinators!</b></p>
         <p class="tagline">Hosted by ACM SIGGRAPH @ FSU</p>
     </section>
 </header>
