--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
   <meta name="twitter:site" content="@GwenLofman" />
   <meta name="twitter:title" content="Building Realities" />
   <meta name="twitter:description" content="Attend the VR hackathon November 2016 at FSU"/>
-  <meta name="twitter:image" content="img/SIGGRAPH_Logo.svg" />
+  <meta name="twitter:image" content="acm-siggraph-fsu.github.io/buildingWorldsHackimg/Square_Green.png" />
 
   <!-- Facebook & Open Graph -->
   <meta property="og:title" content="Building Realities"/>
   <meta property="og:description" content="Attend the VR hackathon November 2016 at FSU"/>
   <meta property="og:site_name" content="Building Realities"/>
-  <meta property="og:url" content="https://acm-siggraph-fsu.github.io/buildingWorldsHack"/>
+  <meta property="og:url" content="acm-siggraph-fsu.github.io/buildingWorldsHackimg/Square_Green.png"/>
   <meta property="og:image" content="img/SIGGRAPH_Logo.svg"/>
   <meta property="og:image:width" content="600px" />
   <meta property="og:image:height" content="600px" />
