--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   <meta property="og:title" content="Building Realities"/>
   <meta property="og:description" content="Attend the VR hackathon November 2016 at FSU"/>
   <meta property="og:site_name" content="Building Realities"/>
-  <meta property="og:url" content="acm-siggraph-fsu.github.io/buildingWorldsHackimg/Square_Green.png"/>
-  <meta property="og:image" content="img/SIGGRAPH_Logo.svg"/>
+  <meta property="og:url" content="acm-siggraph-fsu.github.io/buildingWorldsHackimg"/>
+  <meta property="og:image" content="acm-siggraph-fsu.github.io/buildingWorldsHackimg/Square_Green.png"/>
   <meta property="og:image:width" content="600px" />
   <meta property="og:image:height" content="600px" />
   <meta property="og:type" content="webstie" />
