Implements site body, and fixes position of the background.

--- a/index.html
+++ b/index.html
@@ -166,11 +166,44 @@
     </section>
 </header>
 
-<nav class="site-nav crossfade">
-
+<nav class="site-nav to-body" id="site-nav">
+    <ul class="site-nav">
+        <li class="site-nav icon"><span><img src="img/SIGGRAPH_Icon.png"></img></span></li>
+        <li class="site-nav title"><h2>Building Realities</h2></li>
+        <li class="site-nav button"><a href="#about">About</a></li>
+        <li class="site-nav button"><a href="#travel">Travel</a></li>
+        <li class="site-nav button"><a href="#signup">Singup</a></li>
+        <li class="site-nav button"><a href="#sponsors">Sponsors</a></li>
+        <li class="site-nav button"><a href="#contact">Contact</a></li>
+    </ul>
 </nav>
 <!-- Main content -->
-<main class="centered">
+<main id="body">
+  <div class="container">
+    <section id="about">
+        <p>Lorem Ipsum dolor sin amet. We want to encourage and inspire more women to make waves in technology. That’s why we are proud to announce the launch of Mediaocean’s Women in Technology Scholarship Fund. Through this program, we will help 3 women achieve their dream career in technology, with a $25k scholarship each. Open to current undergraduate and graduate students in STEM degrees, we hope that this scholarship will spark interest and give three motivated women the opportunity to make their dreams happen.</p>
+        <p>e want to encourage and inspire more women to make waves in technology. That’s why we are proud to announce the launch of Mediaocean’s Women in Technology Scholarship Fund. Through this program, we will help 3 women achieve their dream career in technology, with a $25k scholarship each. Open to current undergraduate and graduate students in STEM degrees, we hope that this scholarship will spark interest and give three motivated women the opportunity to make their dreams happen.</p>
+        <br><br><br><br>
+        <p>We want to encourage and inspire more women to make waves in technology. That’s why we are proud to announce the launch of Mediaocean’s Women in Technology Scholarship Fund. Through this program, we will help 3 women achieve their dream career in technology, with a $25k scholarship each. Open to current undergraduate and graduate students in STEM degrees, we hope that this scholarship will spark interest and give three motivated women the opportunity to make their dreams happen.</p>
+        <br><br>
+    </section>
+    <section id="travel">
+        <p>We want to encourage and inspire more women to make waves in technology. That’s why we are proud to announce the launch of Mediaocean’s Women in Technology Scholarship Fund. Through this program, we will help 3 women achieve their dream career in technology, with a $25k scholarship each. Open to current undergraduate and graduate students in STEM degrees, we hope that this scholarship will spark interest and give three motivated women the opportunity to make their dreams happen.</p>
+        <br><br><br><br><br><br><br><br><br><br><br>
+    </section>
+    <section id="signup">
+        <p>We want to encourage and inspire more women to make waves in technology. That’s why we are proud to announce the launch of Mediaocean’s Women in Technology Scholarship Fund. Through this program, we will help 3 women achieve their dream career in technology, with a $25k scholarship each. Open to current undergraduate and graduate students in STEM degrees, we hope that this scholarship will spark interest and give three motivated women the opportunity to make their dreams happen.</p>
+        <br><br><br><br><br><br><br>
+    </section>
+    <section id="sponsors">
+        <p>We want to encourage and inspire more women to make waves in technology. That’s why we are proud to announce the launch of Mediaocean’s Women in Technology Scholarship Fund. Through this program, we will help 3 women achieve their dream career in technology, with a $25k scholarship each. Open to current undergraduate and graduate students in STEM degrees, we hope that this scholarship will spark interest and give three motivated women the opportunity to make their dreams happen.</p>
+        <br><br><br><br><br><br><br>
+    </section>
+    <section id="contact">
+        <p>We want to encourage and inspire more women to make waves in technology. That’s why we are proud to announce the launch of Mediaocean’s Women in Technology Scholarship Fund. Through this program, we will help 3 women achieve their dream career in technology, with a $25k scholarship each. Open to current undergraduate and graduate students in STEM degrees, we hope that this scholarship will spark interest and give three motivated women the opportunity to make their dreams happen.</p>
+        <br><br><br><br><br><br><br>
+    </section>
+  </div>
 </main>
 
 <script src="js/headline.js"></script>
