Updates date for hackathon.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <!-- Header with Summary Content -->
 <header class="masthead centered">
     <h1>Building Realities</h1>
-    <h2>VR Hackathon, FSU, November 2016</h2>
+    <h2>VR Hackathon, FSU, Spring 2017</h2>
     <section class="absolute teaser">
         <!-- Our SVG logo -->
         <div class="realtive container">
