Added functioning links

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <div class="jumbotron hero">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-offset-2 col-md-7 col-md-offset-3 get-it">
+                <div class="col-lg-offset-2 col-md-8 col-md-offset-3 get-it">
                     <h1 class="text-center">Building Realities</h1><img class="img-responsive visible-xs-inline-block visible-sm-inline-block visible-md-inline-block visible-lg-inline-block" src="assets/img/goggles-1.png">
                     <p class="text-center">April 8th - 9th | Florida State University | Dirac Science Library</p>
                     <hr>
                     <p class="text-center">Our mission is to provide students with access to Virtual Reality hardware and give them the power to build new worlds. </p>
                     <p class="text-center">Interested in being a part of the event organization process? We are currently looking for Student Volunteers and Sponsors! </p>
-                    <p class="text-center"><a class="btn btn-danger btn-lg" role="button" href="#">Sponsor </a><a class="btn btn-primary btn-lg" role="button" href="#">Volunteer </a></p>
+                    <p class="text-center"><a class="btn btn-danger btn-lg" role="button" href="mailto:sponsor@building-realities.org">Sponsor </a><a class="btn btn-primary btn-lg" role="button" href="https://gwelof.typeform.com/to/WajzyX">Volunteer </a></p>
                 </div>
             </div>
         </div>
