--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Title and Icon -->
     <title>Building Realities</title>
-    <link rel="icon" type="image/png" href="assets/img/SIGGRAP_Icon.png">  
+    <link rel="icon" type="image/png" href="assets/img/SIGGRAPH_Icon.png">  
   
     <!-- Imports -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
