Added updated index including hosts of hackathon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
+    <title>Building Realities</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100|Source+Sans+Pro:300">
@@ -23,6 +23,11 @@
                     <p class="text-center">Our mission is to provide students with access to Virtual Reality hardware and give them the power to build new worlds. </p>
                     <p class="text-center">Interested in being a part of the event organization process? We are currently looking for Student Volunteers and Sponsors! </p>
                     <p class="text-center"><a class="btn btn-danger btn-lg" role="button" href="mailto:sponsor@building-realities.org">Sponsor </a><a class="btn btn-primary btn-lg" role="button" href="https://gwelof.typeform.com/to/WajzyX">Volunteer </a></p>
+                </div>
+                <div class="col-md-12">
+                    <footer>
+                        <p class="text-center">Hosted by ACM SIGGRAPH @ FSU</p>
+                    </footer>
                 </div>
             </div>
         </div>
